--- a/package.yaml
+++ b/package.yaml
@@ -20,10 +20,20 @@ extra-source-files:
 description:         Please see the README on GitHub at <https://github.com/ThomWright/nest-exporter#readme>
 
 dependencies:
+- aeson == 1.3.1.1
+- aeson-pretty == 0.8.7
 - base >= 4.7 && < 5
+- bytestring == 0.10.8.2
+- config-ini == 0.2.2.0
+- http-client == 0.5.14
+- http-client-tls == 0.3.5.3
+- http-conduit == 2.3.2
+- optparse-applicative == 0.14.3.0
+- text == 1.2.3.1
 
 library:
   source-dirs: src
+  default-extensions: OverloadedStrings
   ghc-options:
     - -Wall
     - -Werror
@@ -36,6 +46,7 @@ executables:
   nest-exporter:
     main:                Main.hs
     source-dirs:         app
+    default-extensions: OverloadedStrings
     ghc-options:
     - -threaded
     - -rtsopts
