--- a/package.yaml
+++ b/package.yaml
@@ -30,6 +30,7 @@ dependencies:
 - http-conduit == 2.3.2
 - optparse-applicative == 0.14.3.0
 - text == 1.2.3.1
+- unordered-containers == 0.2.9.0
 
 library:
   source-dirs: src
