--- a/package.yaml
+++ b/package.yaml
@@ -28,8 +28,10 @@ dependencies:
 - http-client == 0.5.14
 - http-client-tls == 0.3.5.3
 - http-conduit == 2.3.2
+- http-types == 0.12.2
 - optparse-applicative == 0.14.3.0
 - text == 1.2.3.1
+# - transformers == 0.5.5.0
 - unordered-containers == 0.2.9.0
 
 library:
